[package]
name = "moon-bundler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
darklua = "0.12.1"
full_moon = { version = "0.19.0", features = ["roblox"] }
# stacker = "0.1.15"
stylua = { version = "0.20.0", features = ["luau"] }
# tokio = { version = "1.36.0", features = ["full"] }
