[package]
name = "moon-bundler"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
darklua = "0.13"
full_moon = { version = "0.19", features = ["roblox"] }
stylua = { version = "0.20", features = ["luau"] }
# tokio = { version = "1.36.0", features = ["full"] }

